# tervyx-evidence

./: .env.example  .gitignore  EXTRACTION_GUIDE.md  GEMINI_IMPLEMENTATION.md  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
abstracts/: .gitkeep
config/: entry_catalog.yaml  extraction_policy.yaml  k_precheck.yaml  phi_precheck.yaml  sources.yaml
evidence/: .gitkeep
extractions/: .gitkeep
outputs/evidence_catalog/: .gitkeep
protocol/: esv.schema.json  esv_context.schema.json
src/: __init__.py
src/catalog/: __init__.py  catalog_loader.py
src/common/: __init__.py  hashing.py  io_utils.py  logging.py
src/export/: __init__.py  export_to_a.py  export_to_d.py
src/extraction/: __init__.py  gemini_client.py  llm_extract.py  validators.py
src/gates_precheck/: __init__.py  k_precheck.py  phi_precheck.py
src/matching/: __init__.py  relevance_matcher.py
src/search/: __init__.py  crossref_client.py  pubmed_client.py
tools/: build_from_catalog.py  export_pipeline_runner.py  generate_evidence.py  quick_smoke_tests.py  run_30_sample_extraction.py  test_gemini_extraction.py
